--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PracticalTest01Var10</string>
+    <string name="title_activity_practical_test01_var10_secondary">
+        PracticalTest01Var10SecondaryActivity
+    </string>
 </resources>
